# agentic-edu-toy

./: .env.example  .gitignore  README.md  environment.yml  main.py  pyproject.toml
setup/: create_conda_env.sh  install_project.sh  smoke_test.sh
src/agentic_sandbox/: __init__.py  agents.py  cli.py  config.py  curriculum.py  llm.py  memory.py  models.py  prototype.py  workflow.py
